k8s/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: lib
spec:  
  selector:
    run: lib-app
  ports:
    - port: 80
      targetPort: 80
