k8s/db_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: lib
spec:  
  selector:
    run: lib-db
  ports:
    - port: 3306
      targetPort: 3306
